@@ -1,86 +1,94 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.message.MessageCreateRequest;
-import com.sprint.mission.discodeit.dto.message.MessageResponse;
-import com.sprint.mission.discodeit.dto.message.MessageUpdateRequest;
-import com.sprint.mission.discodeit.entity.*;
-import com.sprint.mission.discodeit.repository.*;
+import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.request.MessageCreateRequest;
+import com.sprint.mission.discodeit.dto.request.MessageUpdateRequest;
+import com.sprint.mission.discodeit.entity.BinaryContent;
+import com.sprint.mission.discodeit.entity.Message;
+import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import com.sprint.mission.discodeit.repository.ChannelRepository;
+import com.sprint.mission.discodeit.repository.MessageRepository;
+import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.MessageService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.UUID;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class BasicMessageService implements MessageService {
     private final MessageRepository messageRepository;
-    private final BinaryContentRepository binaryContentRepository;
+    //
     private final ChannelRepository channelRepository;
     private final UserRepository userRepository;
+    private final BinaryContentRepository binaryContentRepository;
 
     @Override
-    public MessageResponse create(MessageCreateRequest request) {
-        if (!channelRepository.existsById(request.channelId())) {
-            throw new NoSuchElementException("Channel not found with id " + request.channelId());
-        }
-        if (!userRepository.existsById(request.authorId())) {
-            throw new NoSuchElementException("Author not found with id " + request.authorId());
-        }
+    public Message create(MessageCreateRequest messageCreateRequest, List<BinaryContentCreateRequest> binaryContentCreateRequests) {
+        UUID channelId = messageCreateRequest.channelId();
+        UUID authorId = messageCreateRequest.authorId();
 
-        Message message = new Message(request.content(), request.channelId(), request.authorId());
-        messageRepository.save(message);
-
-        List<UUID> attachmentIds = new ArrayList<>();
-        if (request.attachments() != null) {
-            for (byte[] file : request.attachments()) {
-                BinaryContent binaryContent = new BinaryContent(null, message.getId());
-                binaryContentRepository.save(binaryContent);
-                attachmentIds.add(binaryContent.getId());
-            }
+        if (!channelRepository.existsById(channelId)) {
+            throw new NoSuchElementException("Channel with id " + channelId + " does not exist");
+        }
+        if (!userRepository.existsById(authorId)) {
+            throw new NoSuchElementException("Author with id " + authorId + " does not exist");
         }
 
-        return new MessageResponse(message.getId(), message.getCreatedAt(), message.getContent(), message.getChannelId(), message.getAuthorId(), attachmentIds);
+        List<UUID> attachmentIds = binaryContentCreateRequests.stream()
+                .map(attachmentRequest -> {
+                    String fileName = attachmentRequest.fileName();
+                    String contentType = attachmentRequest.contentType();
+                    byte[] bytes = attachmentRequest.bytes();
+
+                    BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length, contentType, bytes);
+                    BinaryContent createdBinaryContent = binaryContentRepository.save(binaryContent);
+                    return createdBinaryContent.getId();
+                })
+                .toList();
+
+        String content = messageCreateRequest.content();
+        Message message = new Message(
+                content,
+                channelId,
+                authorId,
+                attachmentIds
+        );
+        return messageRepository.save(message);
     }
 
     @Override
-    public Optional<MessageResponse> find(UUID messageId) {
-        return messageRepository.findById(messageId).map(message -> {
-            List<UUID> attachmentIds = binaryContentRepository.findByMessageId(message.getId()).stream()
-                    .map(BinaryContent::getId)
-                    .collect(Collectors.toList());
-            return new MessageResponse(message.getId(), message.getCreatedAt(), message.getContent(), message.getChannelId(), message.getAuthorId(), attachmentIds);
-        });
+    public Message find(UUID messageId) {
+        return messageRepository.findById(messageId)
+                .orElseThrow(() -> new NoSuchElementException("Message with id " + messageId + " not found"));
     }
 
     @Override
-    public List<MessageResponse> findAllByChannelId(UUID channelId) {
-        return messageRepository.findByChannelId(channelId).stream()
-                .map(message -> {
-                    List<UUID> attachmentIds = binaryContentRepository.findByMessageId(message.getId()).stream()
-                            .map(BinaryContent::getId)
-                            .collect(Collectors.toList());
-                    return new MessageResponse(message.getId(), message.getCreatedAt(), message.getContent(), message.getChannelId(), message.getAuthorId(), attachmentIds);
-                }).collect(Collectors.toList());
+    public List<Message> findAllByChannelId(UUID channelId) {
+        return messageRepository.findAllByChannelId(channelId).stream()
+                .toList();
     }
 
     @Override
-    public void update(MessageUpdateRequest request) {
-        Message message = messageRepository.findById(request.id())
-                .orElseThrow(() -> new NoSuchElementException("Message with id " + request.id() + " not found"));
-
-        message.update(request.newContent());
-        messageRepository.save(message);
+    public Message update(UUID messageId, MessageUpdateRequest request) {
+        String newContent = request.newContent();
+        Message message = messageRepository.findById(messageId)
+                .orElseThrow(() -> new NoSuchElementException("Message with id " + messageId + " not found"));
+        message.update(newContent);
+        return messageRepository.save(message);
     }
 
     @Override
     public void delete(UUID messageId) {
-        if (!messageRepository.existsById(messageId)) {
-            throw new NoSuchElementException("Message with id " + messageId + " not found");
-        }
+        Message message = messageRepository.findById(messageId)
+                .orElseThrow(() -> new NoSuchElementException("Message with id " + messageId + " not found"));
 
-        binaryContentRepository.findByMessageId(messageId).forEach(file -> binaryContentRepository.deleteById(file.getId()));
+        message.getAttachmentIds()
+                .forEach(binaryContentRepository::deleteById);
+
         messageRepository.deleteById(messageId);
     }
 }
